Updated POM and Feature File